Actually put fixtures into docker image

--- a/test/utils/docker/foreman-simulator/Dockerfile
+++ b/test/utils/docker/foreman-simulator/Dockerfile
@@ -2,8 +2,10 @@ FROM python:3.6-alpine3.7
 
 RUN python -m pip install Flask
 
-ADD foreman_stub.py /usr/src/app/
-ENV PYTHONPATH=/usr/src/app/
+WORKDIR /usr/src/app/
+ADD foreman_stub.py .
+ADD fixtures fixtures
+ENV PYTHONPATH=.
 
 EXPOSE 8080
 CMD ["python", "-m", "foreman_stub"]
